# linkedin_bot

./: .gitignore  LICENSE  PROJECT_PLAN.md
.github/: PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
backend/: main.py  pyproject.toml  requirements.txt
backend/api/: app.py
backend/bot/: bot.py  config.py
backend/bot/cogs/: test_commands.py
backend/core/linkedin/: company_scraper.py  config.py  routes.py  scheduler.py  token_storage.py
backend/core/models/: post.py
backend/scripts/: run_scheduler.py
docker/: docker-compose.yml
frontend/: package-lock.json  package.json
frontend/src/pages/: Dashboard.tsx
