[tool.poetry]
name = "linkedin-discord-bot"
version = "0.1.0"
description = "A Discord bot that syncs LinkedIn content"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 